<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp" >
    
    <TextView style="@style/DisplayLabel"
        android:text="@string/workers_fname_hint"/>
    <View style="@style/minorHr"/> 
	<EditText style="@style/FormInputs"
	    android:id="@+id/worker_new_record_first_name"
	    /> 
	<TextView style="@style/DisplayLabel"
        android:text="@string/workers_lname_hint"/>
    <View style="@style/minorHr"/>	
    <EditText style="@style/FormInputs"
	    android:id="@+id/worker_new_record_last_name"
	    />
	<TextView style="@style/DisplayLabel"
        android:text="@string/workers_phone1_hint"/>
    <View style="@style/minorHr"/>
    <EditText style="@style/FormInputs"
	    android:id="@+id/worker_new_record_phone1"
	    android:inputType="phone"
	    />
    <TextView style="@style/DisplayLabel"
        android:text="@string/workers_phone2_hint"/>
    <View style="@style/minorHr"/>
    <EditText style="@style/FormInputs"
	    android:id="@+id/worker_new_record_phone2"
	    android:inputType="phone"
	    />
	<TextView style="@style/DisplayLabel"
        android:text="@string/workers_email_hint"/>
    <View style="@style/minorHr"/>
    <EditText style="@style/FormInputs"
	    android:id="@+id/worker_new_record_email"
	    android:inputType="textEmailAddress"
	    />
	<TextView style="@style/DisplayLabel"
        android:text="@string/workers_address_hint"/>
    <View style="@style/minorHr"/>
    <EditText style="@style/FormInputs"
	    android:id="@+id/worker_new_record_address"
	    />
    <TextView style="@style/DisplayLabel"
        android:text="@string/workers_occupation_hint"/>
    <View style="@style/minorHr"/>
    <EditText style="@style/FormInputs"
	    android:id="@+id/worker_new_record_occupation"
	    android:hint="@string/workers_occupation_hint"
	    />
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <TextView style="@style/DisplayLabel"
	        android:layout_width="wrap_content"
	        android:layout_weight="0"
        android:text="@string/workers_relationship_hint"/>
	    <Spinner android:id="@+id/workers_relationship_spinner"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:entries="@array/workers_occupations"/>
	</LinearLayout>
    <LinearLayout 
        style="@android:style/ButtonBar"
        android:id="@+id/workers_edit_form_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:text="@string/save_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="saveNew"/>
        <Button android:text="@string/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="cancel"/>
        
    </LinearLayout>
    
    
</LinearLayout>
</ScrollView>