<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:padding="8dp">
    
    <TextView style="@style/DisplayLabel"
        android:text="@string/products_title_hint"/>
    <View style="@style/minorHr"/> 
	<EditText style="@style/FormInputs"
	    android:id="@+id/products_input_title"
	    /> 
	<TextView style="@style/DisplayLabel"
        android:text="@string/products_subtitle_hint"/>
    <View style="@style/minorHr"/>
    <EditText style="@style/FormInputs"
	    android:id="@+id/products_input_subtitle"
	    />
	<TextView style="@style/DisplayLabel"
        android:text="@string/products_unit_price_hint"/>
    <View style="@style/minorHr"/>
    <EditText style="@style/FormInputs"
	    android:id="@+id/products_input_price"
	    android:inputType="numberDecimal"
	    />
    <TextView style="@style/DisplayLabel"
        android:text="@string/products_selling_unit_hint"/>
    <View style="@style/minorHr"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Spinner style="@style/FormInputs"
        android:layout_width="0dp"
        android:layout_weight="1"
	    android:id="@+id/products_input_sale_unit_spinner"
	    />
    <EditText android:id="@+id/products_input_new_sale_unit"
        style="@style/FormInputs"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:visibility="gone"/>
    <Button android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="+"
        android:layout_weight="0"
        android:onClick="addSaleUnit"/>
    </LinearLayout>
	<TextView style="@style/DisplayLabel"
        android:text="@string/products_notes_hint"/>
    <View style="@style/minorHr"/>
    <EditText style="@style/FormInputs"
	    android:id="@+id/products_input_notes"
		android:inputType="textMultiLine"
	    />
    <LinearLayout android:id="@+id/products_amount_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
    <TextView style="@style/DisplayLabel"
        android:text="@string/products_amount_hint"/>
    <View style="@style/minorHr"/>
    
    <EditText style="@style/FormInputs"
	    android:id="@+id/products_input_amount"
		android:inputType="number"
	    />
    
    </LinearLayout>
    <LinearLayout 
        style="@android:style/ButtonBar"
        android:id="@+id/products_edit_form_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:text="@string/save_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="saveNew"/>
        <Button android:text="@string/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="cancel"/>
        
    </LinearLayout>
    
    
</LinearLayout>
</ScrollView>