<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     >

    <item
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_user"
        android:title="@string/button_add_new_customer"
        ><menu>
        <item android:id="@+id/action_add_customer"
           android:title="@string/button_add_new_customer" />
        <item android:id="@+id/action_add_worker"
            android:title="@string/button_add_new_worker"/>
        </menu>
        </item>
    <item
        android:id="@+id/action_add_product"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/button_add_new_product"
        android:icon="@drawable/ic_add_product"/>

</menu>
