<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.learningsqlite.DisplayRecordActivity" >

    
    <item android:id="@+id/menu_item_edit_record"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu_item_edit_record"
        android:icon="@drawable/ic_action_edit"/>
    <item android:id="@+id/menu_item_call"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_item_call"
        android:icon="@drawable/ic_action_call"/>
    <item android:id="@+id/menu_item_email"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_item_email"
        android:icon="@drawable/ic_action_new_email" />
	<item android:id="@+id/menu_item_delete_record"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/delete_button"
        android:icon="@drawable/ic_action_discard"/>
</menu>
