<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/orders_edit_form_container"
    android:padding="8dp" >
    <LinearLayout 
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">
        <Button style=""
            android:text="@string/save_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="saveRecordToDb"/>
        <Button style="" 
            android:text="@string/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="cancel"/>
        
    </LinearLayout>
    
	<EditText style="@style/FormInputs"
	    android:id="@+id/order_new_record_title"
	    android:hint="@string/order_title_hint"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <Button android:id="@+id/orders_order_date_btn"
	    android:onClick="openDatePicker"
	    android:layout_width="wrap_content"
	    android:layout_height="40dp"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/order_date_hint"
	    />
	<EditText style="@style/FormInputs"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:id="@+id/orders_new_record_order_date_field"
	    android:background="@android:color/holo_blue_light"
	    android:textColor="@android:color/white"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="10dp"
	    android:layout_gravity="center"
	    android:textAlignment="center"
	    android:enabled="false"
	    />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	<Button android:id="@+id/orders_target_date_btn"
	    android:onClick="openDatePicker"
	    android:layout_width="wrap_content"
	    android:layout_height="40dp"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/order_fill_by_date_hint"/>
	<EditText style="@style/FormInputs"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:id="@+id/orders_new_record_fill_by_date_field"
	    android:background="@android:color/holo_blue_light"
	    android:textColor="@android:color/white"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="10dp"
	    android:layout_gravity="center"
	    android:textAlignment="center"
	    android:enabled="false"
	    />
	</LinearLayout>
	<EditText style="@style/FormInputs"
	    android:id="@+id/order_new_record_address"
	    android:hint="@string/order_address_hint"
	    />
    <ExpandableListView android:id="@+id/members_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
	</ExpandableListView>
    
    
    
</LinearLayout>
